--- a/LabManual/10-行レベルのセキュリティを適用する.md
+++ b/LabManual/10-行レベルのセキュリティを適用する.md
@@ -22,13 +22,9 @@ lab:
 
 このタスクでは、ラボの環境を設定します。
 
-''重要: 前のラボから続行している (および、そのラボを正常に完了した) 場合は、このタスクを完了せず、代わりに次のタスクから続行してください。''**
-
 1. Power BI Desktop を開きます。
 
     ![Power BI Desktop アイコン](./image/10/02-load-data-with-power-query-in-power-bi-desktop_image1.png)
-
-    ''ヒント: 既定では、Power BI Desktop の前に [はじめに] ダイアログ ボックスが開きます。**サインイン**してから、ポップアップを閉じます。''**
 
 1. スターター Power BI Desktop ファイルを開くには、 **[ファイル] > [レポートを開く] > [レポートの参照]** の順に選択します。
 
@@ -36,9 +32,9 @@ lab:
 
 1. 情報ウィンドウが開いている場合はすべて閉じます。
 
-1. リボンの下の黄色の警告メッセージに注目してください。 "このメッセージは、クエリが、モデル テーブルとしての読み込みに適用されていないことを警告しています。クエリは、このラボの後半で適用します。"**
-   
-    "警告メッセージを無視するには、黄色の警告メッセージの右側にある **[X]** を選択します。"**
+    "黄色の警告メッセージは、クエリが、モデル テーブルとしての読み込みに適用されていないことを警告しています。"
+
+    "警告メッセージを無視するには、黄色の警告メッセージの右側にある **[X]** を選択します。"
 
 1. ファイルのコピーを作成するには、 **[ファイル] > [名前を付けて保存]** の順に移動し、**D:\PL300\MySolution** フォルダーに保存します。
 
@@ -57,9 +53,9 @@ lab:
 
 1. データを確認すると、Michael Blythe (EmployeeKey 281) の UPN の値が **michael-blythe@adventureworks.com** になっています。
    
-    ''Michael Blythe の担当地域が、米国北東部、米国中部、米国南東部の 3 つであることを思い出すかもしれません。''**
+    ''Michael Blythe の営業担当地域は、米国北東部、米国中部、米国南東部の 3つが設定されています。''
 
-1. **[モデリング]** リボン タブで、 **[セキュリティ]** グループ内から **[ロールの管理]** を選択します。
+1. **[ホーム]** リボン タブで、 **[セキュリティ]** グループ内から **[ロールの管理]** を選択します。
 
     ![画像 5700](./image/10/04-configure-data-model-in-power-bi-desktop-advanced_image21.png)
 
@@ -85,9 +81,9 @@ lab:
 
 1. **[ロールとして表示]** ウィンドウで **[その他のユーザー]** 項目を選択してから、対応するボックスに「**michael-blythe@adventureworks.com**」と入力します。
 
-1. **[営業担当者]** ロールを確認してから、 **[OK]** をクリックします。
+1. **[Salespeople]** ロールにチェックを入れて、 **[OK]** をクリックします。
    
-    "この構成により、**Salespeople** ロールと、Michael Blythe の名前を借りたユーザーが使用されることになります。"**
+    "この構成により、**Salespeople** ロールと、Michael Blythe のユーザーが使用されることになります。"
 
    ![画像 5709](./image/10/04-configure-data-model-in-power-bi-desktop-advanced_image28.png)
 
@@ -103,7 +99,7 @@ lab:
 
    ![画像 5712](./image/10/04-configure-data-model-in-power-bi-desktop-advanced_image32.png)
 
-1. **[営業担当者]** ロールを削除するには、 **[モデリング]** リボン タブで、 **[セキュリティ]** グループ内から **[ロールの管理]** を選択します。
+1. **[Salepeople]** ロールを削除するには、 **[セキュリティ]** グループ内から **[ロールの管理]** を選択します。
 
    ![画像 16](./image/10/04-configure-data-model-in-power-bi-desktop-advanced_image33.png)
 
@@ -117,4 +113,4 @@ lab:
 
 1. **[保存]** を選択し、Power BI Desktop ファイルを保存してラボを終了します。
 
-"注: Power BI Desktop ファイルが Power BI サービスに発行されるときに、発行後のタスクを完了して、セキュリティ プリンシパルを **[営業担当者]** ロールにマップする必要があります。このラボでは行いません。"**
+"注: Power BI Desktop ファイルが Power BI サービスに発行されるときに、発行後のタスクを完了して、セキュリティ プリンシパルを **[Salespeople]** ロールにマップする必要があります。このラボでは行いません。"
