--- a/LabManual/演習環境セットアップ.md
+++ b/LabManual/演習環境セットアップ.md
@@ -2,7 +2,7 @@
 
 ## 概要
 
-本作業では、Azure上で演習を実施するために必要な**Skillableアカウントの作成**、**トレーニングキーの登録**を行います。
+本作業では、演習を実施するために必要な**Skillableアカウントの作成**、**トレーニングキーの登録**を行います。
 
 以下の手順を実施することで、演習環境を使用することができます。
 
