--- a/LabManual/10-行レベルのセキュリティを適用する.md
+++ b/LabManual/10-行レベルのセキュリティを適用する.md
@@ -28,7 +28,7 @@ lab:
 
 1. スターター Power BI Desktop ファイルを開くには、 **[ファイル] > [開く] > [このデバイスを参照]** の順に選択します。
 
-1. **[開く]** ウィンドウで、**D:\PL300\Labs\10-row-level-security\Starter** フォルダーに移動し、**Sales Analysis** ファイルを開きます。
+1. **[開く]** ウィンドウで、**D:\Allfiles\Labs\10-row-level-security\Starter** フォルダーに移動し、**Sales Analysis** ファイルを開きます。
 
 1. 情報ウィンドウが開いている場合はすべて閉じます。
 
@@ -36,7 +36,7 @@ lab:
 
     "警告メッセージを無視するには、黄色の警告メッセージの右側にある **[X]** を選択します。"
 
-1. ファイルのコピーを作成するには、 **[ファイル] > [名前を付けて保存]** の順に移動し、**D:\PL300\MySolution** フォルダーに保存します。
+1. ファイルのコピーを作成するには、 **[ファイル] > [名前を付けて保存]** の順に移動し、**D:\Allfiles\MySolution** フォルダーに保存します。
 
 1. 変更の適用を求めるメッセージが表示されたら、**[後で適用]** を選択します。
 
