--- a/LabManual/10-行レベルのセキュリティを適用する.md
+++ b/LabManual/10-行レベルのセキュリティを適用する.md
@@ -36,7 +36,7 @@ lab:
 
 このタスクでは、行レベルのセキュリティを適用して、営業担当者が自分の担当地域での売上のみを表示できるようにします。
 
-1. データ ビューに切り替えます。
+1. テーブル ビューに切り替えます。
 
    ![画像 5701](./image/10/04-configure-data-model-in-power-bi-desktop-advanced_image20.png)
 
