--- a/LabManual/10-行レベルのセキュリティを適用する.md
+++ b/LabManual/10-行レベルのセキュリティを適用する.md
@@ -23,12 +23,12 @@ lab:
 1. この演習を完了するには、まず Web ブラウザーを開き、次の URL を入力して zip フォルダーをダウンロードします。
 
     ```
-    https://github.com/MicrosoftLearning/PL-300-Microsoft-Power-BI-Data-Analyst/raw/Main/Allfiles/Labs/10-row-level-security/10-row-level-security.zip
+    https://github.com/MicrosoftLearning/PL-300-Microsoft-Power-BI-Data-Analyst/raw/Main/Allfiles/Labs/11-secure-data-access/11-secure-data.zip
     ```
 
-    フォルダーを **C:\Users\ctct\Downloads\10-row-level-security** フォルダーに展開します。
+    フォルダーを **C:\Users\ctct\Downloads\11-secure-data** フォルダーに展開します。
 
-    **10-Starter-Sales Analysis.pbix** ファイルを開きます。
+    **11-Starter-Sales Analysis.pbix** ファイルを開きます。
 
     > ***注**: **[キャンセル]** を選択すると、サインインを閉じることができます。 他のすべての情報ウィンドウを閉じます。 変更の適用を求めるメッセージが表示されたら、**[後で適用]** を選択します。
 
